<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/login_title" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings_title" />
    </group>

    <item android:title="@string/apps_title">
        <menu>
            <item
                android:id="@+id/nav_checkin"
                android:icon="@drawable/ic_menu_camera"
                android:visible="false"
                android:title="@string/check_in_title" />
            <item
                android:id="@+id/nav_barcode_id"
                android:icon="@drawable/ic_menu_gallery"
                android:visible="false"
                android:title="@string/barcode_id_title" />
            <!-- Add your menu item to the drawer here, set visible=false if it should not be visible to everyone
            <item
                android:id="@+id/nav_demo"
                android:icon="@drawable/ic_notifications"
                android:visible="false"
                android:title="Demo App" /> -->
        </menu>
    </item>
</menu>
